# ward

./: .gitignore  Cargo.toml  LICENSE  README.md  SPECS.md  bypass_secret.txt  package-lock.json  package.json  script.min.js  test_secrets.txt
src/: bip39_english.txt  config.rs  git.rs  main.rs  scanner.rs
