[package]
name = "ward"
version = "0.1.0"
edition = "2021"
authors = ["Elhoucine Aouassar"]
description = "Local-First Git Guard for preventing secret leaks"
repository = "https://github.com/elhoucineaouassar/ward"
license = "MIT"
keywords = ["git", "secret-scanning", "security", "cli"]
readme = "README.md"
[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ignore = "0.4"
globset = "0.4"
colored = "2.1"

anyhow = "1.0"
thiserror = "1.0"
